@@ -1,0 +1,24 @@
+``morepath.generic`` -- Generic dispatch functions
+==================================================
+
+.. automodule:: morepath.generic
+
+.. autofunction:: path
+
+.. autofunction:: class_path
+
+.. autofunction:: deferred_link_app
+
+.. autofunction:: view
+
+.. autofunction:: identify
+
+.. autofunction:: verify_identity
+
+.. autofunction:: permits
+
+.. autofunction:: load_json
+
+.. autofunction:: dump_json
+
+.. autofunction:: link_prefix
