@@ -1,0 +1,6 @@
+``morepath.implicit`` -- Implicit Dispatch Lookup
+=================================================
+
+.. automodule:: morepath.implicit
+
+.. autofunction:: set_implicit
