@@ -1,23 +1,52 @@
+"""These generic functions are by Morepath's implementation (response
+generation, link generation, security, json load/restore).
+
+The functions are made pluggable by the use of the
+:func:`reg.dispatch` and :func:`reg.dispatch_external_predicates`
+decorators. Morepath's configuration function uses this to register
+implementations using :meth:`reg.Registry.register_function`.
+
+:func:`morepath.remember_identity`, :func:`morepath.forget_identity` and
+:func:`morepath.settings` are exported to the public API.
+"""
 import reg
 from webob.exc import HTTPNotFound
 
 
 @reg.dispatch('obj')
 def path(obj):
-    """Get the path and parameters for an object in its own application.
+    """Get the path and parameters for a model object in its own application.
+
+    :param obj: model object or :class:`morepath.App` instance.
+    :return: a tuple with a URL path and URL parameters, or ``None`` if
+      path cannot be determined.
     """
     return None
 
 
 @reg.dispatch(reg.match_class('cls', lambda cls: cls))
 def class_path(cls, variables):
-    """Get the path for a class.
+    """Get the path for a model class.
+
+    :param cls: model class or :class:`morepath.App` subclass.
+    :param variables: dictionary with variables to reconstruct
+      the path and URL paramaters from path pattern.
+    :return: a tuple with URL path and URL parameters, or ``None`` if
+      path cannot be determined.
     """
     return None
 
 
 @reg.dispatch('obj')
 def deferred_link_app(mounted, obj):
+    """Get application used for link generation.
+
+    :param mounted: current :class:`morepath.App` instance.
+    :param obj: model object to link to.
+    :return: instance of :class:`morepath.App` subclass that handles
+      link generation for this model, or ``None`` if no app exists
+      that can construct link.
+    """
     return None
 
 
@@ -25,10 +54,17 @@ def deferred_link_app(mounted, obj):
 def view(obj, request):
     """Get the view that represents the obj in the context of a request.
 
-    This view is a representation of the obj that can be rendered to
-    a response. It may also return a Response directly. If a string is
-    returned, the string is converted to a Response with the string as
-    the response body.
+    This view is a representation of the obj that can be rendered to a
+    response. It may also return a :class:`morepath.Response`
+    directly.
+
+    Predicates are installed in :mod:`morepath.core` that inspect both
+    ``obj`` and ``request`` to see whether a matching view can be found.
+
+    :param obj: model object to represent with view.
+    :param request: :class:`morepath.Request` instance.
+    :return: :class:`morepath.Response` object, or
+      :class:`webob.exc.HTTPNotFound` if view cannot be found.
     """
     return HTTPNotFound()
 
@@ -43,16 +79,19 @@ def settings():
 
       settings().logging.loglevel
 
+    :return: current settings object for this app.
     """
     raise NotImplementedError  # pragma: nocoverage
 
 
 @reg.dispatch()
 def identify(request):
-    """Returns an Identity or None if no identity can be found.
+    """Determine identity for request.
 
-    Can also return NO_IDENTITY, but None is converted automatically
-    to this.
+    :param: a :class:`morepath.Request` instance.
+    :return: a :class:`morepath.Identity` instance or ``None`` if
+      no identity can be found. Can also return :data:`morepath.NO_IDENTITY`,
+      but ``None`` is converted automatically to this.
     """
     return None
 
@@ -60,6 +99,13 @@ def identify(request):
 @reg.dispatch('identity')
 def verify_identity(identity):
     """Returns True if the claimed identity can be verified.
+
+    Look in the database to verify the identity, or in case of auth
+    tokens, always consider known identities to be correct.
+
+    :param: :class:`morepath.Identity` instance.
+    :return: ``True`` if identity can be verified. By default no identity
+      can be verified so this returns ``False``.
     """
     return False
 
@@ -67,6 +113,10 @@ def verify_identity(identity):
 @reg.dispatch()
 def remember_identity(response, request, identity):
     """Modify response so that identity is remembered by client.
+
+    :param response: :class:`morepath.Response` to remember identity on.
+    :param request: :class:`morepath.Request`
+    :param identity: :class:`morepath.Identity`
     """
     raise NotImplementedError  # pragma: nocoverage
 
@@ -74,6 +124,9 @@ def remember_identity(response, request, identity):
 @reg.dispatch()
 def forget_identity(response, request):
     """Modify response so that identity is forgotten by client.
+
+    :param response: :class:`morepath.Response` to forget identity on.
+    :param request: :class:`morepath.Request`
     """
     raise NotImplementedError  # pragma: nocoverage
 
@@ -82,10 +135,16 @@ def forget_identity(response, request):
               reg.match_class('permission',
                               lambda permission: permission))
 def permits(identity, obj, permission):
-    """Returns True if identity has permission for model.
+    """Returns ``True`` if identity has permission for model object.
 
-    identity can be the special NO_IDENTITY singleton; register for
-    NoIdentity to handle this case separately.
+    identity can be the special :data:`morepath.NO_IDENTITY`
+    singleton; register for :class:`morepath.security.NoIdentity` to handle
+    this case separately.
+
+    :param identity: :class:`morepath.Identity`
+    :param obj: model object
+    :param permission: permission class.
+    :return: ``True`` if identity has permission for obj.
     """
     return False
 
@@ -94,7 +153,11 @@ def permits(identity, obj, permission):
 def load_json(request, json):
     """Load JSON as some object.
 
-    Can return any Python object.
+    By default JSON is loaded as itself.
+
+    :param request: :class:`morepath.Request`
+    :param json: JSON (in Python form) to convert into object.
+    :return: Any Python object, including JSON.
     """
     return json
 
@@ -105,7 +168,9 @@ def dump_json(request, obj):
 
     ``obj`` is any Python object, try to interpret it as JSON.
 
-    The return value is JSON-serialized.
+    :param request: :class:`morepath.Request`
+    :param obj: any Python object to convert to JSON.
+    :return: JSON representation (in Python form).
     """
     return obj
 
@@ -113,5 +178,10 @@ def dump_json(request, obj):
 @reg.dispatch()
 def link_prefix(request):
     """Returns a prefix that's added to every link generated by the request.
+
+    By default :attr:`webob.request.BaseRequest.application_url` is used.
+
+    :param request: :class:`morepath.Request`
+    :return: prefix string to add before links.
     """
     return request.application_url
